@@ -1,5 +1,6 @@
 == master
 
+* Fix not allowing multiple methods to be specificed as arguments in callbacks
 * Fix initial states being set when loading records from the database in Sequel integration
 * Allow static initial states to be set earlier in the initialization of an object
 * Use friendly validation errors for nil states
